--- a/.travis.yml
+++ b/.travis.yml
@@ -48,27 +48,6 @@ jobs:
     env:
     - PLATFORM='xenial-emscripten'
     script: "./travis/build.sh"
-  - stage: build_deb_dist
-    os: linux
-    env:
-      - BUILD_DIST='TRUE'
-      - CC_VER=5
-      - PLATFORM='xenial'
-    script:
-    - "./travis/build.sh"
-    - "./travis/xenial/push_debs_github.sh"
-  - stage: build_deb_dist
-    os: linux
-    env:
-      - BUILD_DIST='TRUE'
-      - CC_VER=5
-      - PLATFORM='stretch'
-    script:
-    - "./travis/build.sh"
-    - "./travis/stretch/push_debs_github.sh"
-  - stage: merge_deb_platforms_to_ghpages
-    os: linux
-    script: "./travis/merge_debs_ghpages.sh"
   - stage: publish
     if: tag =~ ^v
     os: linux
@@ -105,6 +84,31 @@ jobs:
       on:
         tags: true
         all_branches: true
-before_install:
-- openssl aes-256-cbc -K $encrypted_450b689219c8_key -iv $encrypted_450b689219c8_iv
-  -in keys.tar.enc -out travis/keys.tar -d
+  - stage: build_deb_dist
+    if: tag =~ ^v
+    before_install:
+    - openssl aes-256-cbc -K $encrypted_450b689219c8_key -iv $encrypted_450b689219c8_iv -in keys.tar.enc -out travis/keys.tar -d
+    os: linux
+    env:
+      - BUILD_DIST='TRUE'
+      - CC_VER=5
+      - PLATFORM='xenial'
+    script:
+    - "./travis/build.sh"
+    - "./travis/xenial/push_debs_github.sh"
+  - stage: build_deb_dist
+    if: tag =~ ^v
+    before_install:
+    - openssl aes-256-cbc -K $encrypted_450b689219c8_key -iv $encrypted_450b689219c8_iv -in keys.tar.enc -out travis/keys.tar -d
+    os: linux
+    env:
+      - BUILD_DIST='TRUE'
+      - CC_VER=5
+      - PLATFORM='stretch'
+    script:
+    - "./travis/build.sh"
+    - "./travis/stretch/push_debs_github.sh"
+  - stage: merge_deb_platforms_to_ghpages
+    if: tag =~ ^v
+    os: linux
+    script: "./travis/merge_debs_ghpages.sh"
