Debian stretch build stage should use CC_VER=6 cleaned up env variable passing in build.sh Don't install packages that don't exist on Dockerfile.stretch push_debs_github.sh more robust thanks to codacy

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,35 +39,35 @@ jobs:
     os: linux
     script:
     - echo
-#  - stage: build+test
-#    os: linux
-#    env:
-#    - CMAKE_ARGS='-DBUILD_TESTS=ON'
-#    - TEST='TRUE'
-#    - CC_VER="4.9"
-#    - PLATFORM='xenial'
-#    script: "./travis/build.sh"
-#  - stage: build+test
-#    os: linux
-#    env:
-#    - CMAKE_ARGS='-DBUILD_TESTS=ON'
-#    - TEST='TRUE'
-#    - CC_VER="5"
-#    - PLATFORM='xenial'
-#    script: "./travis/build.sh"
-#  - stage: build+test
-#    os: linux
-#    env:
-#    - CMAKE_ARGS='-DBUILD_PYTHON=ON'
-#    - TEST='TRUE'
-#    - CC_VER="5"
-#    - PLATFORM='xenial'
-#    script: "./travis/build.sh"
-#  - stage: build+test
-#    os: linux
-#    env:
-#    - PLATFORM='xenial-emscripten'
-#    script: "./travis/build.sh"
+  - stage: build+test
+    os: linux
+    env:
+    - CMAKE_ARGS='-DBUILD_TESTS=ON'
+    - TEST='TRUE'
+    - CC_VER="4.9"
+    - PLATFORM='xenial'
+    script: "./travis/build.sh"
+  - stage: build+test
+    os: linux
+    env:
+    - CMAKE_ARGS='-DBUILD_TESTS=ON'
+    - TEST='TRUE'
+    - CC_VER="5"
+    - PLATFORM='xenial'
+    script: "./travis/build.sh"
+  - stage: build+test
+    os: linux
+    env:
+    - CMAKE_ARGS='-DBUILD_PYTHON=ON'
+    - TEST='TRUE'
+    - CC_VER="5"
+    - PLATFORM='xenial'
+    script: "./travis/build.sh"
+  - stage: build+test
+    os: linux
+    env:
+    - PLATFORM='xenial-emscripten'
+    script: "./travis/build.sh"
   - stage: publish
     if: tag =~ ^v
     os: linux
@@ -123,7 +123,7 @@ jobs:
     os: linux
     env:
       - BUILD_DIST='TRUE'
-      - CC_VER=5
+      - CC_VER=6
       - PLATFORM='stretch'
     script:
     - "./travis/build.sh"
